src/test/deca/context/invalid/utilisationAvantDecl.deca
// Description :
//    Utilisation d'une variable avant sa déclaration.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Variable y non déclarée

{
    int x = y + 5;
    int y = 10;
}